--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     
 </head>
 <body class="verde">
@@ -26,45 +26,50 @@
 <h2 id="1">1. Belo Horizonte</h2>
 <p>Capital de Minas Gerais, importante centro cultural, econômico e político do estado.</p>
 <p><strong>População</strong> - 2,5 milhões</p>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="image1bh.png" alt="">
+<img src="image2bh.png" alt="">
+<img src="image3bh.png" alt="">
+<br>
 <a href="#topo">Voltar ao topo</a><br>
 <a href="index.html">Página Principal</a>
 
 <h2 id="2">2. Uberlândia</h2>
 <p>Importante polo de logística, educação e agronegócio no Triângulo Mineiro.</p>
 <p><strong>População</strong> - 720 mil</p>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="image1ub.png" alt="">
+<img src="image2ub.png" alt="">
+<img src="image3ub.png" alt="">
+<br>
 <a href="#topo">Voltar ao topo</a><br>
 <a href="index.html">Página Principal</a>
 
 <h2 id="3">3. Contagem</h2>
 <p>Grande centro industrial e parte da Região Metropolitana de Belo Horizonte.</p>
 <p><strong>População</strong> - 670 mil</p>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="image1cont.png" alt="">
+<img src="image2cont.png" alt="">
+<img src="image3cont.png" alt="">
+<br>
 <a href="#topo">Voltar ao topo</a><br>
 <a href="index.html">Página Principal</a>
 
 <h2 id="4">4. Juiz de Fora</h2>
 <p>Reconhecida pela sua tradição em educação, serviços e indústria.</p>
 <p><strong>População</strong> - 580 mil</p>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="image1jf.png" alt="">
+<img src="image2jf.png" alt="">
+<img src="image3jf.png" alt="">
+<br>
 <a href="#topo">Voltar ao topo</a><br>
 <a href="index.html">Página Principal</a>
 
 <h2 id="5">5. Betim</h2>
 <p>Importante polo industrial, com destaque para a indústria automobilística.</p>
 <p><strong>População</strong> - 450 mil</p>
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<img src="image1bt.png" alt="">
+<img src="image2bt.png" alt="">
+<img src="image3bt.png" alt="">
+<br>
 <a href="#topo">Voltar ao topo</a><br>
 <a href="index.html">Página Principal</a>
 
