--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body class="vermelho">
     <div class="vermelho">
@@ -26,45 +26,50 @@
     <h2 id="1">1. São Paulo</h2>
     <p>A maior cidade do Brasil, e centro ecônomico, financeiro e cultural do país.</p>
     <p><strong>População</strong>- <span>12,3 milhões</span></p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1sp.png" >
+    <img src="image2sp.png" >
+    <img src="image3sp.png" >
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="2">2. Guarulhos</h2>
     <p>Grande polo industrial e abriga o principal aeroporto internacional do Brasil</p>
     <p><strong>População</strong>-1,4 milhão</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1gua.png" >
+    <img src="image2gua.png" >
+    <img src="image3gua.png" >
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="3">3. Campinas</h2>
     <p>Importante centro de tecnologia, ciência e educação</p>
     <p><strong>População</strong>- 1,2 milhão</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1cam.png">
+    <img src="image2cam.png" >
+    <img src="image3cam.png" >
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="4">4. São Bernardo do Campo</h2>
     <p>Conhecida por sua forte presença na industria automobilística</p>
     <p><strong>População</strong>- 850 mil</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1ber.png" >
+    <img src="image2ber.png" >
+    <img src="image3ber.png" >
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="5">5. Santo André</h2>
     <p>Também parte do ABC paulista, com destaque para industria e comércio</p>
     <p><strong>População</strong>- 723 mil</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1and.png" >
+    <img src="image2and.png" >
+    <img src="image3and.png" >
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
     </div>
