--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body class="azul">
     <div class="azul">
@@ -25,45 +25,50 @@
     <h2 id="1">1. Rio de Janeiro</h2>
     <p>Rio de Janeiro é a segunda maior cidade do Brasil, famosa por turismo e importância no setor de petróleoe gás.</p>
     <p><strong>População</strong>- 6,7 milhões</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1rj.png" alt="">
+    <img src="image2rj.png" alt="">
+    <img src="image3rj.png" alt="">
+    <br>
     <a href="#topo">Voltar ao topo</a> <br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="2">2. São Gonçalo</h2>
     <p>Sãoo Gonçalo é uma cidade com grande crescimento populacional proxima à capital. </p>
     <p><strong>População</strong>-1,1 milhão</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1gon.png" alt="">
+    <img src="image2gon.png" alt="">
+    <img src="image3gon.png" alt="">
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="3">3. Duque de Caxias</h2>
     <p>Duque de Caxias é um importante polo industrial e logistico, com presença forte no setor do petróleo. </p>
     <p><strong>População</strong>- 930 mil</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1cax.png" alt="">
+    <img src="image2cax.png" alt="">
+    <img src="image3cax.png" alt="">
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="4">4. Nova Iguaçu</h2>
     <p>Nova Iguaçu é uma importante cidade da Baixada Fluminense, no Rio de Janeiro, conhecida por seu polo comercial e cultural.</p>
     <p><strong>População</strong>- 840 mil</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1nova.png" alt="">
+    <img src="image2nova.png" alt="">
+    <img src="image3nova.png" alt="">
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
 
     <h2 id="5">5. Niterói</h2>
     <p>Niterói é uma cidade do Rio de Janeiro, famosa por suas praias, qualidade de vida e pelas obras de Oscar Niemeyer, como o Museu de Arte Contemporânea.</p>
     <p><strong>População</strong>- 480 mil</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="image1nit.png" alt="">
+    <img src="image2nit.png" alt="">
+    <img src="image3nit.png" alt="">
+    <br>
     <a href="#topo">Voltar ao topo</a><br>
     <a href="index.html">Página Principal</a>
     </div>
